# agent-alchemy

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODEOWNERS  README.md  index.html  mkdocs.yml  package.json  pnpm-workspace.yaml  pyproject.toml
.claude/: Claude_Code_Insights.html  agent-alchemy.local.md  settings.json
.claude-plugin/: marketplace.json
.opencode/: GAP-REPORT.md  MIGRATION-GUIDE.md
agent-tools/: README.md  pyproject.toml
agent-tools/docs/: contributing.md  getting-started.md
agent-tools/src/agent_tools/: __init__.py  cli.py  config.py  discovery.py  install.py  models.py  output.py
agent-tools/src/agent_tools/harnesses/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  opencode.py  registry.py
agent-tools/src/agent_tools/sources/: __init__.py  base.py  git.py  local.py  registry.py
agent-tools/tests/: test_cli.py  test_config.py  test_discovery.py  test_filtering.py  test_git_source.py  test_harness_adapters.py  test_harnesses.py  test_install.py  test_local_source.py  test_output.py  test_registry_source.py
architecture/: index.html
claude-tools/: package.json
configuration/: index.html
contributing/: index.html
docs/: architecture.md  configuration.md  contributing.md  getting-started.md  index.md  task-manager.md  vscode-extension.md
getting-started/: index.html
plugins/: index.html
schemas/: marketplace.schema.json  mcp.schema.json  plugin.schema.json  skill-frontmatter.schema.json
scripts/: copy-ported.sh  deploy-docs.sh
search/: search_index.json
stylesheets/: extra.css
task-manager/: index.html
(+648 files in other folders)
