[project]
name = "agent-tools"
version = "0.1.0"
description = "Universal skill/subagent installer for AI coding harnesses"
readme = "README.md"
authors = [
    { name = "Stephen Sequenzia", email = "sequenzia@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
agent-tools = "agent_tools.cli:app"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
